--- a/src/common/color.scss
+++ b/src/common/color.scss
@@ -1,4 +1,6 @@
-$primary-color: #0f171e;
-$secondary-color: #1a242f;
+$primary-color: #2e6054;
+$secondary-color: #3a8358;
+$primary-button-color: #4e6b89;
+$secondary-button-color: #3c845e;
 $font-primary-color: #fff;
 $font-secondary-color: #79b8f3;
