--- a/src/components/CreateMovie/CreateMovie.scss
+++ b/src/components/CreateMovie/CreateMovie.scss
@@ -1,4 +1,5 @@
 @import '../../common/component.scss';
+@import '../../common/color.scss';
 
 .create-movie {
     margin: 20px 0 50px;
@@ -14,12 +15,21 @@
     margin-top: 10px;
 
     .input {
-        border: 1px solid #1e4c43;
+        border: 1px solid $primary-color;
         outline: none;
         padding: 10px;
         border-radius: 4px;
         font-size: 16px;
+        color: $secondary-color;
     }
+}
+
+.create-action {
+    display: flex;
+    justify-content: center;
+    gap: 10;
+    margin-top: 5;
+    width: 100%;
 }
 
 .btn {
