--- a/src/pages/user/DashboardAdmin.scss
+++ b/src/pages/user/DashboardAdmin.scss
@@ -1,3 +1,7 @@
+.dashboard {
+    padding: 20px;
+}
+
 .table-data-poster {
     width: 100px;
     height: 100px;
@@ -45,7 +49,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // border: 1px solid gray;
     padding: 10px;
 }
 
