--- a/src/pages/user/Login.scss
+++ b/src/pages/user/Login.scss
@@ -1,54 +1,100 @@
-// @import "../../common/component.scss";
+@import "../../common/color.scss";
+@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
 
 .card {
-    background-color: #262933;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-    div {
-        border-radius: 8px;
-        width: 500px;
-        padding: 30px;
-        background-color: rgba(255, 255, 255, 0.2);
+    background: linear-gradient(to bottom, $primary-color, $secondary-color);
+    width: 100vw;
+    height: 100vh;
+}
+
+::placeholder {
+    color: $secondary-color
+}
+
+.card-inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    margin: 0 auto;
+    min-width: 500px;
+    background-color: #fff;
+    box-shadow: 5px 39px 89px 68px #3a8358;
+
+    .icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        margin: 10px auto;
+        font-size: 18px;
+        background-color: $secondary-button-color;
+        border-radius: 99px;
+    }
+
+    h1 {
+        font-family: "Tangerine", cursive;
+        font-size: 50px;
+        font-weight: 700;
+        text-align: center;
     }
 
     .title {
-        color: #a0a1a4;
-        font-size: 22px;
+        color: $primary-color;
+        font-size: 30px;
+        text-align: center;
     }
 
     form {
         display: flex;
         flex-direction: column;
         width: 100%;
-        max-width: 500px;
         margin-top: 20px;
 
-        input {
-            font-size: 16px;
-            margin-top: 15px;
-            padding: 15px;
-            border: none;
-            outline: none;
-            color: #a0a1a4;
-            background-color: #31373e;
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+            position: relative;
+
+            ilabel {
+                color:#a0a1a4;
+            }
+    
+            input {
+                font-size: 16px;
+                margin-top: 5px;
+                padding: 15px;
+                border: 1px solid $secondary-color;
+                outline: none;
+                color: $secondary-color;
+                background-color: #fff;
+            }
+    
+            .fa-solid {
+                color: $secondary-color;
+                position: absolute;
+                top: 70%;
+                transform: translateY(-50%);
+                right: 10px;
+            }
         }
 
         .btn-login {
             font-size: 16px;
             font-weight: 600;
-            margin: 20px auto;
-            padding: 10px;
-            min-width: 120px;
-            background-color: #55babb;
+            margin: 30px auto 20px;
+            padding: 15px;
+            width: 100%;
+            background: linear-gradient(to right, $secondary-button-color, $primary-button-color);
             outline: none;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            color: #31373e;
+            color: #fff;
+            text-transform: uppercase;
         
             &:hover {
                 opacity: 0.9;
@@ -56,13 +102,15 @@
         }
 
         .not-account {
-            color: #a0a1a4;
+            color: #333;
+            font-size: 16px;
         }
 
         .link-register {
             color: rgb(126, 126, 228);
             text-decoration: underline;
             margin-left: 5px;
+            font-weight: 600;
         }
     }
 }
