--- a/src/pages/user/Register.scss
+++ b/src/pages/user/Register.scss
@@ -1,23 +1,42 @@
-// @import "../../common/component.scss";
+@import "../../common/component.scss";
+@import "../../common/color.scss";
 
 .card {
+    background: linear-gradient(to bottom, $primary-color, $secondary-color);
+    width: 100vw;
+    height: 100vh;
+}
+
+::placeholder {
+    color: $secondary-color
+}
+
+.card-inner {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
+    padding: 30px;
     margin: 0 auto;
-    
-    div {
-        width: 500px;
-        background-color: rgba(255, 255, 255, 0.2);
-        border-radius: 8px;
-        padding: 30px;
+    background-color: #fff;
+    box-shadow: 5px 39px 89px 68px #3a8358;
+
+    .icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        margin: 10px auto;
+        font-size: 18px;
+        background-color: $secondary-button-color;
+        border-radius: 99px;
     }
 
     .title {
-        color: #a0a1a4;
-        font-size: 22px;
+        color: $primary-color;
+        font-size: 30px;
+        text-align: center;
     }
 
     form {
@@ -26,32 +45,47 @@
         width: 100%;
         margin-top: 5px;
 
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+        }
+
         label {
             color:#a0a1a4;
         }
 
         input {
             font-size: 16px;
-            margin-top: 15px;
+            margin-top: 5px;
             padding: 15px;
-            border: none;
+            border: 1px solid $secondary-color;
             outline: none;
-            color: #a0a1a4;
-            background-color: #31373e;
+            color: $secondary-color;
+            background-color: #fff;
+        }
+
+        .fa-solid {
+            color: $secondary-color;
+            position: absolute;
+            top: 70%;
+            transform: translateY(-50%);
+            right: 10px;
         }
 
         .btn-register {
             font-size: 16px;
             font-weight: 600;
-            margin: 20px auto;
-            padding: 10px;
-            min-width: 120px;
-            background-color: #55babb;
+            margin: 30px auto 20px;
+            padding: 15px;
+            width: 100%;
+            background: linear-gradient(to right, $secondary-button-color, $primary-button-color);
             outline: none;
             border: none;
             border-radius: 4px;
+            text-transform: uppercase;
             cursor: pointer;
-            color: #31373e;
+            color: #fff;
         
             &:hover {
                 opacity: 0.9;
@@ -59,13 +93,16 @@
         }
 
         .account {
-            color: #a0a1a4;
+            color: #333;
+            font-size: 16px;
         }
 
         .link-login {
             color: rgb(126, 126, 228);
             text-decoration: underline;
             margin-left: 5px;
+            font-weight: 600;
         }
     }
+
 }
